Add AdSense verfication meta tag

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="AIToolsIndia" />
     <meta name="keywords" content="AI tools, artificial intelligence, free AI tools, India, ChatGPT, Canva AI, machine learning, AI directory" />
     <meta name="robots" content="index, follow" />
+    <meta name="google-adsense-account" content="ca-pub-4271932377647977">
     <link rel="canonical" href="https://aitoolsindia.in" />
     
     <!-- Fonts -->
