--- a/index.html
+++ b/index.html
@@ -38,6 +38,29 @@
 
   <body>
     <div id="root"></div>
+    <!-- Google AdSense Ad -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4271932377647977"
+     crossorigin="anonymous"></script>
+    <!-- build -->
+    <ins class="adsbygoogle"
+       style="display:inline-block;width:728px;height:90px"
+       data-ad-client="ca-pub-4271932377647977"
+       data-ad-slot="7716394757"></ins>
+    <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    <!-- Google AdSense Fluid Ad -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4271932377647977"
+     crossorigin="anonymous"></script>
+    <ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-69+cc+6-3u+kc"
+     data-ad-client="ca-pub-4271932377647977"
+     data-ad-slot="8837904739"></ins>
+    <script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
